--- a/we17304/package.json
+++ b/we17304/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "json-server --watch db.json"
   },
   "devDependencies": {
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "navigo": "^8.11.1"
   }
 }
